package seedu.address.model.event;

import java.time.LocalDateTime;

public interface TimeEvent {
    LocalDateTime getIndicatorTime();
}
